# Loom

./: .gitignore  CMakeLists.txt  README.md
Loom/: CMakeLists.txt  Loom.h
Loom/include/Loom/: EntryPoint.h
Loom/include/Loom/Core/: Application.h  Core.h  EntryPoint.h
Loom/include/Loom/Log/: Log.h  LogLevels.h
Loom/include/Loom/LoomEngine/: LoomEngine.h
Loom/include/Loom/LoomEngine/Events/: Event.h
Loom/include/Loom/LoomEngine/Log/: Log.h  LogLevels.h
Loom/include/Loom/LoomRender2D/: Render2D.h
Loom/include/Loom/Renderer2D/: Renderer2D.h
Loom/src/Core/: Application.cpp
Loom/src/Log/: Log.cpp
Loom/src/LoomEngine/Core/: Application.cpp
Loom/src/LoomEngine/Log/: Log.cpp
Loom/src/LoomRender2D/: Render2D.cpp
Loom/src/Renderer2D/: Renderer2D.cpp
LoomEngine/: CMakeLists.txt
LoomEngine/LoomCore/: CMakeLists.txt
LoomEngine/LoomCore/Include/: EntryPoint.h  LoomEngine.h
LoomEngine/LoomCore/Include/Core/: Application.h  Assert.h  Core.h  Time.h  Types.h
LoomEngine/LoomCore/Include/Events/: Event.h  EventDispatcher.h  EventHandle.h  EventMacro.h  EventType.h  IEvent.h
LoomEngine/LoomCore/Include/Events/Events/: KeyEvents.h  MouseEvents.h  WindowEvents.h  WindowsEvents.h
LoomEngine/LoomCore/Include/Input/: Input.h  InputAction.h  InputContext.h  InputSubsystem.h  InputTypes.h  KeyCodes.h  MouseCodes.h
LoomEngine/LoomCore/Include/Log/: Log.h  LogLevels.h  LogMessage.h  LogStack.h
LoomEngine/LoomCore/Include/Log/Sinks/: ConsoleSink.h  FileSink.h  ILogSink.h
LoomEngine/LoomCore/Include/Math/: Math.h
LoomEngine/LoomCore/Include/Math/MathTypes/: Vector2.h
LoomEngine/LoomCore/Include/Window/: Window.h
LoomEngine/LoomCore/Include/Window/Events/: WindowEvents.h
LoomEngine/LoomCore/Include/Window/PlatformCreation/: WindowsWindow.h
LoomEngine/LoomCore/Source/Core/: Application.cpp  Assert.cpp  Time.cpp
LoomEngine/LoomCore/Source/Events/: Event.cpp  EventDispatcher.cpp
LoomEngine/LoomCore/Source/Input/: Input.cpp  InputAction.cpp  InputContext.cpp  InputRuntime.cpp  InputRuntime.h  InputSubsystem.cpp  InputTypes.cpp
LoomEngine/LoomCore/Source/Log/: Log.cpp  LogStack.cpp
LoomEngine/LoomCore/Source/Log/Sinks/: ConsoleSink.cpp  FileSink.cpp  ILogSink.cpp
LoomEngine/LoomCore/Source/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
LoomEngine/LoomCore/Source/Window/PlatformCreation/: WindowsWindow.cpp
LoomEngine/LoomRender2D/: CMakeLists.txt
LoomSandbox/: CMakeLists.txt  LoomSandbox.loomproject
LoomSandbox/Source/: main.cpp
Sandbox/: CMakeLists.txt
Sandbox/Source/: SandboxApp.cpp
Stitch/: CMakeLists.txt
Stitch/src/: main.cpp
Tools/EngineModuleLoader/: configure_engine_modules.py  load_modules.bat
Tools/LoomCLI/: CreateGame.bat
Tools/LoomCLI/Scripts/: LoomCLI.py  LoomUpdateEngine.py  LoomUpdateEngineModules.py
Tools/LoomCLI/Templates/: CMakeLists.txt.txt  CMakePresets.json.txt  LoomProject.json.txt  ReloadModules.bat.txt  UpdateEngine.bat.txt  main.cpp.txt
